<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="450dp"
    android:minHeight="200dp">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/fingerprintEnrolledLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:text="@string/fingerprint_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_fingerprint"
            android:id="@+id/fingerprintIcon"
            android:contentDescription="@string/fingerprint_message"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:text="@string/touch_sensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fingerprintMessage"
            app:layout_constraintBottom_toBottomOf="@+id/fingerprintIcon"
            app:layout_constraintTop_toTopOf="@+id/fingerprintIcon"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toRightOf="@+id/fingerprintIcon"
            android:layout_marginLeft="16dp"/>

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:text="@string/fingerprint_added"
        android:layout_width="209dp"
        android:layout_height="wrap_content"
        android:id="@+id/fingerprintAdded"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintHorizontal_bias="0.0"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondButton"
        android:background="@null"
        app:layout_constraintRight_toRightOf="@+id/fingerprintEnrolledLayout"
        app:layout_constraintBaseline_toBaselineOf="@+id/cancelButton"
        app:layout_constraintLeft_toRightOf="@+id/fingerprintEnrolledLayout"/>

    <Button
        android:text="@android:string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cancelButton"
        android:background="@null"
        app:layout_constraintRight_toLeftOf="@+id/secondButton"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/fingerprintEnrolledLayout"
        app:layout_constraintHorizontal_bias="1.0"/>

</android.support.constraint.ConstraintLayout>